--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,8 @@
 
 .app__body {
     display: flex;
-    padding-top: 10px;
+    margin-top: 35px;
+    /*max-width: 1200px;*/
+    margin-right: 5%;
+    margin-left: 5%;
 }
